--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         build: .
         restart: unless-stopped
         ports:
-            - 3306:3306
+            - 3309:3306
         environment:
             - MYSQL_ROOT_PASSWORD=My_Passw0rd
             - MYSQL_REPLICA_USER=replica
@@ -17,7 +17,7 @@ services:
         build: .
         restart: unless-stopped
         ports:
-            - 3307:3306
+            - 3310:3306
         environment:
             - MYSQL_ROOT_PASSWORD=My_Passw0rd
             - MYSQL_REPLICA_USER=replica
@@ -33,3 +33,8 @@ services:
             - 3366:3306
         depends_on:
             - master2
+        ulimits:
+            nproc: 1000000
+            nofile:
+                soft: 1000000
+                hard: 1000000
